--- a/app/src/main/res/layout/activity_second_chain_onboarding.xml
+++ b/app/src/main/res/layout/activity_second_chain_onboarding.xml
@@ -77,6 +77,7 @@
                     android:layout_marginStart="60dp"
                     android:layout_marginTop="40dp"
                     android:src="@drawable/vector_back_btn"
+                    android:visibility="invisible"
                     android:transitionName="backBtn"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
