--- a/app/src/main/res/layout/activity_second_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_second_onboarding_screen.xml
@@ -86,6 +86,7 @@
                         android:src="@drawable/vector_back_btn"
                         app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginTop="40dp"
+                        android:visibility="invisible"
                         app:layout_constraintStart_toStartOf="parent"
                         android:layout_marginStart="60dp"
                         tools:layout_editor_absoluteY="15dp"
@@ -276,7 +277,8 @@
                                 android:textColor="@color/secondary"
                                 android:editable="false"
                                 android:clickable="true"
-                                android:focusable="false"/>
+                                android:focusable="false"
+                                android:cursorVisible="false"/>
 
                         </com.google.android.material.textfield.TextInputLayout>
 
