--- a/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
@@ -75,6 +75,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:transitionName="backBtn"
+                    android:visibility="invisible"
                     android:src="@drawable/vector_back_btn"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginTop="40dp"
