--- a/app/src/main/res/layout/item_inclusion_and_charges.xml
+++ b/app/src/main/res/layout/item_inclusion_and_charges.xml
@@ -30,7 +30,11 @@
                 android:id="@+id/inclusion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/H5" />
+                android:textSize="@dimen/H5"
+                android:focusable="false"
+                android:clickable="true"
+                android:editable="false"
+                android:cursorVisible="false"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
