--- a/app/src/main/res/layout/dialog_reservation_filter.xml
+++ b/app/src/main/res/layout/dialog_reservation_filter.xml
@@ -45,11 +45,12 @@
                 app:layout_constraintStart_toEndOf="@id/iv_back"
                 app:layout_constraintTop_toTopOf="@id/iv_back" />
             <TextView
+                android:id="@+id/apply"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="19dp"
                 android:fontFamily="@font/roboto_medium"
-                android:text="Clear"
+                android:text="Apply"
                 android:textColor="@color/black"
                 android:textSize="@dimen/H3"
                 app:layout_constraintBottom_toBottomOf="@id/iv_back"
