--- a/app/src/main/res/layout/item_inclusion_and_charges.xml
+++ b/app/src/main/res/layout/item_inclusion_and_charges.xml
@@ -124,6 +124,8 @@
                     android:id="@+id/rate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:imeOptions="actionDone"
                     android:textSize="@dimen/H5" />
 
             </com.google.android.material.textfield.TextInputLayout>
