--- a/app/src/main/res/layout/activity_second_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_second_onboarding_screen.xml
@@ -430,6 +430,7 @@
                                 android:layout_height="match_parent"
                                 android:fontFamily="@font/roboto"
                                 android:inputType="number"
+                                android:maxLength="10"
                                 android:textColorHint="@color/secondary"
                                 android:textColor="@color/secondary" />
 
