--- a/app/src/main/res/layout/dialog_add_inclusion.xml
+++ b/app/src/main/res/layout/dialog_add_inclusion.xml
@@ -12,8 +12,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="@dimen/createDialogWidth"
+            android:layout_height="@dimen/createDialogHeight">
 
             <TextView
                 android:id="@+id/aA"
