--- a/app/src/main/res/layout/fragment_rate_plan_discount.xml
+++ b/app/src/main/res/layout/fragment_rate_plan_discount.xml
@@ -288,7 +288,7 @@
                         app:layout_constraintTop_toBottomOf="@id/ll4"
                         android:layout_marginTop="16dp"/>
                     <TextView
-                        android:id="@+id/add_button"
+                        android:id="@+id/addDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/H5"
@@ -300,6 +300,16 @@
                         app:layout_constraintBottom_toBottomOf="@id/charges_details"
                         app:layout_constraintEnd_toEndOf="parent" />
 
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/dateRecycler"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                        app:spanCount="2"
+                        tools:listitem="@layout/item_date"
+                        app:layout_constraintStart_toStartOf="@id/charges_details"
+                        app:layout_constraintEnd_toEndOf="@id/addDate"
+                        app:layout_constraintTop_toBottomOf="@id/addDate"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
