--- a/app/src/main/res/layout/item_corporates_partners.xml
+++ b/app/src/main/res/layout/item_corporates_partners.xml
@@ -41,15 +41,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.87"/>
-        <CheckBox
-            android:id="@+id/switch_all"
-            android:layout_width="19dp"
-            android:layout_height="19dp"
-            app:layout_constraintEnd_toStartOf="@id/company"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-
 
         <TextView
             android:id="@+id/company"
@@ -58,13 +49,13 @@
             style="@style/listTextHeading"
             android:layout_marginStart="10dp"
             android:text="Amazon"
-            app:layout_constraintEnd_toStartOf="@id/propertyName"
+            app:layout_constraintEnd_toStartOf="@id/personName"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/switch_all"/>
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
-            android:id="@+id/propertyName"
+            android:id="@+id/personName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             style="@style/listTextHeading"
@@ -75,7 +66,7 @@
 
 
         <TextView
-            android:id="@+id/bedType"
+            android:id="@+id/ratePlanCount"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             style="@style/listTextHeading"
@@ -86,7 +77,7 @@
             app:layout_constraintTop_toTopOf="@id/company"/>
 
         <TextView
-            android:id="@+id/adultChild"
+            android:id="@+id/expiration"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             style="@style/listTextHeading"
