--- a/app/src/main/res/layout/fragment_contract_details_child.xml
+++ b/app/src/main/res/layout/fragment_contract_details_child.xml
@@ -54,7 +54,7 @@
                 </LinearLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/pincode_layout"
+                    android:id="@+id/CheckIn_layout"
                     style="@style/ClickableTextInputLayoutStyle"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/textInputLayoutHeight"
@@ -62,16 +62,19 @@
                     android:hint="Effective From"
                     app:endIconMode="custom"
                     app:endIconDrawable="@drawable/svg_date"
-                    app:layout_constraintEnd_toStartOf="@id/city_layout"
+                    app:layout_constraintEnd_toStartOf="@id/CheckOut_layout"
                     app:layout_constraintStart_toStartOf="@id/ll5"
                     app:layout_constraintTop_toBottomOf="@+id/ll5">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/pincode_text"
+                        android:id="@+id/check_in"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto"
                         android:textSize="@dimen/H5"
+                        android:editable="false"
+                        android:focusable="false"
+                        android:clickable="true"
                         android:inputType="number"
                         android:textColor="@color/secondary"
                         android:textColorHint="@color/secondary" />
@@ -79,7 +82,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/city_layout"
+                    android:id="@+id/CheckOut_layout"
                     style="@style/ClickableTextInputLayoutStyle"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/textInputLayoutHeight"
@@ -89,11 +92,11 @@
                     app:endIconMode="custom"
                     app:endIconDrawable="@drawable/svg_date"
                     app:layout_constraintEnd_toEndOf="@id/ll5"
-                    app:layout_constraintStart_toEndOf="@id/pincode_layout"
+                    app:layout_constraintStart_toEndOf="@id/CheckIn_layout"
                     app:layout_constraintTop_toBottomOf="@+id/ll5">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/city_text"
+                        android:id="@+id/check_out"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:editable="false"
@@ -107,58 +110,9 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/state_layout"
-                    style="@style/ClickableTextInputLayoutStyle"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/textInputLayoutHeight"
-                    android:layout_marginTop="10dp"
-                    android:hint="Contact Type"
-                    app:layout_constraintEnd_toStartOf="@id/country_layout"
-                    app:layout_constraintStart_toStartOf="@id/pincode_layout"
-                    app:layout_constraintTop_toBottomOf="@+id/pincode_layout">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/state_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:clickable="true"
-                        android:editable="false"
-                        android:focusable="false"
-                        android:textSize="@dimen/H5"
-                        android:fontFamily="@font/roboto"
-                        android:inputType="text"
-                        android:textColor="@color/secondary"
-                        android:textColorHint="@color/secondary" />
 
-                </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/country_layout"
-                    style="@style/TextInputLayoutStyle"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/textInputLayoutHeight"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:hint="Credit Limit"
-                    app:layout_constraintEnd_toEndOf="@id/city_layout"
-                    app:layout_constraintStart_toEndOf="@id/state_layout"
-                    app:layout_constraintTop_toBottomOf="@+id/city_layout">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/currency_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/roboto"
-                        android:textSize="@dimen/H5"
-                        android:inputType="text"
-                        android:editable="false"
-                        android:clickable="true"
-                        android:focusable="false"
-                        android:textColor="@color/secondary"
-                        android:textColorHint="@color/secondary" />
-
-                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/cT"
@@ -170,7 +124,7 @@
                     android:text="Contract Terms"
                     android:textSize="@dimen/H4"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/state_layout" />
+                    app:layout_constraintTop_toBottomOf="@id/CheckOut_layout" />
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardET"
