--- a/app/src/main/res/layout/fragment_company_details_child2.xml
+++ b/app/src/main/res/layout/fragment_company_details_child2.xml
@@ -77,7 +77,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto"
-                        android:text="Property Logo" />
+                        android:text="Company Logo" />
 
                 </LinearLayout>
 
