--- a/app/src/main/res/layout/fragment_rate_plan_bar.xml
+++ b/app/src/main/res/layout/fragment_rate_plan_bar.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".dashboard.configuration.roomsAndRates.createRate.ratePlanBar.RatePlanBarFragment">
+
 
 
     <androidx.cardview.widget.CardView
@@ -40,4 +41,4 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
