--- a/app/src/main/res/layout/fragment_rate_plan_update_bar.xml
+++ b/app/src/main/res/layout/fragment_rate_plan_update_bar.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".dashboard.configuration.roomsAndRates.createRate.ratePlanCompany.RatePlanCompanyFragment">
+    tools:context=".dashboard.configuration.roomsAndRates.createRate.ratePlanBar.RatePlanBarFragment">
 
     <TextView
         android:id="@+id/heading"
@@ -61,18 +61,20 @@
 
     </androidx.cardview.widget.CardView>
 
+
     <androidx.cardview.widget.CardView
         android:id="@+id/card1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         style="@style/CardViewTheme"
         app:cardCornerRadius="12dp"
         app:cardElevation="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/heading"
+
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="15dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -80,12 +82,12 @@
             android:paddingVertical="10dp">
 
 
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="5dp"
                 android:layout_marginHorizontal="20dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:orientation="vertical"
