--- a/app/src/main/res/layout/fragment_create_rate_type.xml
+++ b/app/src/main/res/layout/fragment_create_rate_type.xml
@@ -292,10 +292,13 @@
                     android:layout_height="match_parent"
                     android:fontFamily="@font/roboto"
                     android:textSize="@dimen/H5"
-                    android:hint="Room Type"
                     android:inputType="text"
                     android:textColorHint="@drawable/hint_selector"
-                    android:textColor="@color/secondary" />
+                    android:textColor="@color/secondary"
+                    android:clickable="true"
+                    android:editable="false"
+                    android:focusable="false"
+                    android:cursorVisible="false"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
