--- a/app/src/main/res/layout/fragment_rate_plan_package.xml
+++ b/app/src/main/res/layout/fragment_rate_plan_package.xml
@@ -94,7 +94,7 @@
                         android:layout_height="@dimen/textInputLayoutHeight"
                         android:layout_marginStart="10dp"
                         android:layout_weight="1"
-                        android:hint="Rate Code"
+                        android:hint="Short Code"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black">
 
@@ -608,13 +608,59 @@
 
                             </com.google.android.material.card.MaterialCardView>
 
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_marginTop="3dp"
+                                android:gravity="center_vertical"
+                                android:layout_gravity="center_vertical"
+                                android:layout_weight=".7">
+
+                                <androidx.cardview.widget.CardView
+                                    android:layout_width="40dp"
+                                    android:layout_height="40dp"
+                                    app:cardCornerRadius="11dp"
+                                    app:cardElevation="2dp"
+                                    android:layout_marginStart="4dp"
+                                    android:layout_marginVertical="5dp"
+                                    app:cardBackgroundColor="@color/white"
+                                    app:strokeWidth="1dp">
+
+                                    <ImageView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:layout_gravity="center"
+                                        android:src="@drawable/svg_add"/>
+
+                                </androidx.cardview.widget.CardView>
+
+                                <androidx.cardview.widget.CardView
+                                    android:layout_width="40dp"
+                                    android:layout_height="40dp"
+                                    app:cardCornerRadius="11dp"
+                                    app:cardElevation="2dp"
+                                    android:layout_marginStart="10dp"
+                                    app:cardBackgroundColor="@color/white"
+                                    app:strokeWidth="1dp">
+
+                                    <ImageView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:layout_gravity="center"
+                                        android:src="@drawable/svg_remove"/>
+
+                                </androidx.cardview.widget.CardView>
+
+                            </LinearLayout>
+
                             <com.google.android.material.textfield.TextInputLayout
                                 android:id="@+id/adjistmentLayout"
                                 android:layout_width="60dp"
                                 android:layout_height="@dimen/textInputLayoutHeight"
                                 android:hint="Adjustment ₹"
                                 style="@style/TextInputLayoutStyle"
-                                android:layout_weight="2"
+                                android:layout_weight="1.3"
                                 app:endIconMode="clear_text"
                                 app:endIconTint="@color/black">
                                 <com.google.android.material.textfield.TextInputEditText
